syntax = "proto3";

option go_package = "github.com/reymooy27/arena-backend/payment-service/proto";

package proto;

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

service HelloService {
  rpc SayHello(HelloRequest) returns (HelloResponse);
}
